--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/imgss/readCounter#readme",
   "dependencies": {
+    "async": "^2.3.0",
     "cheerio": "^0.22.0"
   }
 }
